apps/infrastructure/rancher/resources/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: rancher
  namespace: cattle-system

  annotations:
    cert-manager.io/cluster-issuer: homelab-ca
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - __HOSTNAME__
      secretName: rancher-web-ui-tls

  rules:
    - host: __HOSTNAME__

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: rancher
                port:
                  number: 443
